@@ -4,6 +4,11 @@
 | in some way an extension to the changelog.                                   |
 +==============================================================================+
 
+Jump-Back:
+  If you create a new tab the startup-path is saved. You can now step deep into
+  the dir-tree and Ctrl-J brings you back to your starting-position.
+  It's also possible to set the current directory manually as Jump-Back-Point.
+
 useraction: new placeholder: %_ListFile()%
   is replaced by path/filename of a temporary file containing a list of items
   usefull for external scripts
